src/objects/QPMS__Audit__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Sites__c</fullName>
        <description>To store the sites data in audit object</description>
        <label>Sites</label>
        <length>31072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <description>Start date for audit</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status pick list data for audit object</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Departments__c</fullName>
        <description>To save subdepartments ids</description>
        <label>Sub Departments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Contacts Related to Supplier</description>
        <label>Supplier Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to save supplier value</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Test_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Audits (Manufacturing Site)</relationshipLabel>
        <relationshipName>Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>To display audit title</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Travel_Cost__c</fullName>
        <description>to store travel cost</description>
        <label>Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to on/off travel required</description>
        <label>Travel Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Group__c</fullName>
        <label>View Only Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <description>To store view only entity data values</description>
        <label>View Only Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that record is locked or not( in approval process or not)</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check submitted for approval</description>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Audit</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>QPMS__Lead_Auditor__c</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>QPMS__Audit_Age__c</columns>
        <columns>QPMS__Start_Date__c</columns>
        <columns>QPMS__End_Date__c</columns>
        <columns>QPMS__Audit_Type_Title__c</columns>
        <columns>QPMS__Audit_Type__c</columns>
        <columns>QPMS__Audit_Program__c</columns>
        <columns>QPMS__Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Audit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Audit</fullName>
        <active>true</active>
        <label>Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__PlannedAudit</fullName>
        <active>true</active>
        <label>PlannedAudit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>